refactoring from toList method to use collect from streams api to deploy to heroku